# torrent_monitor

./: README.rst  pyproject.toml
tests/: test_config.py  test_parser.py  test_torrent.py
tests/test_config/: config.ini
torrent/: conf.py  conversion_byte.py  main.py  parser.py  show.py
